[package]
name = "black-box-planning-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "black-box-planning-solver"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"
serde_cbor = "0.11.2"

[profile.dev]
opt-level = 2
